# doty

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  README.md  bonnie.toml
agent/: ARCHITECTURE.md  INTEGRATION_TESTS.md
agent/decisions/: 2025-11-22-fix-broken-symlink-removal.md  2025-11-22-link-command-output-cleanup.md  2025-11-22-refactor-linker-diff-logic.md  2025-11-22_diff-based-linking-with-warnings.md
agent/docs/: .gitignore
agent/plans/: phase_3.md
agent/summary/: 2025-11-21-architecture-path-resolution.md  2025-11-21-phase1-core-foundation.md  2025-11-21-phase1.1-vfs-integration.md  2025-11-21-phase1.2-target-path-resolution-fix-v2.md  2025-11-21-phase1.2-target-path-resolution-fix.md  2025-11-21-phase2-linker-core-logic.md  2025-11-21-phase2.1-implementation-status.md  2025-11-21-playground-setup.md  2025-11-22-link-command-output-cleanup.md  2025-11-22-linker-refactoring.md  2025-11-22-linkfolder-linkfilesrecursive-conflict-fix.md  2025-11-22-lockfile-format-improvements.md  2025-11-22-playground-test-cases-improvement.md  2025-11-22-pluralization-support.md  2025-11-22-update-unchanged-link-icon.md
builder/summary/: 2025-11-21-architecture-path-resolution.md
playground/: .gitignore  .ignore  README.md  doty-simple.kdl  doty.kdl  test.sh
playground/source/: .test-hidden  config.toml  (+2 more)
playground/source-seed/: test-lfr-1-single-file.md  test-lfr-2-inline.md  test-path-1-config.md
src/: commands.rs  config.rs  fs_utils.rs  linker.rs  lockfile.rs  main.rs  scanner.rs  state.rs
tests/: 01_link_folder.rs  README.md  cli_test_utils.rs
(+21 files in other folders)
