[package]
name = "doty"
version = "0.1.0"
edition = "2021"
authors = ["bjesuiter"]
description = "A hybrid dotfiles manager with flexible linking strategies"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
kdl = "6.0"
anyhow = "1.0"
camino = "1.1"
serde = { version = "1.0", features = ["derive"] }
hostname = "0.4"

colored = "2.1"
pluralizer = "0.5.0"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
